--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-1">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+      <h2 class="card__title">Link 1</h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
@@ -21,7 +21,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-2">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+      <h2 class="card__title">Link 2 </h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
@@ -29,7 +29,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-3">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Ut enim ad minim veniam.</h2>
+      <h2 class="card__title"> Link 3</h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
@@ -37,7 +37,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-4">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Quis nostrud exercitation ullamco laboris nisi.</h2>
+      <h2 class="card__title">Link 4.</h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
@@ -45,7 +45,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-5">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Ut aliquip ex ea commodo consequat. Duis aute irure dolor.</h2>
+      <h2 class="card__title">Link 5</h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
@@ -53,7 +53,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-1">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+      <h2 class="card__title">Link 6</h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
