--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!-- 
 
-GRADIENT BANNER DESIGN BY SIMON LURWER ON DRIBBBLE:
-https://dribbble.com/shots/14101951-Banners
-
+Surya
 -->
 <div class="main-container">
   <div class="heading">
