--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Surya
       <p class="card__exit"><i class="fas fa-times"></i></p>
       <h2 class="card__title">Link 1</h2>
       <p class="card__apply">
-        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+        <a class="card__link" href="https://schneider-electric-dev.collibra.com/glossary?view=239f570a-ad57-4ee2-a725-3f264cca0da8">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
     </div>
     <div class="card card-2">
