--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Surya
 <div class="main-container">
   <div class="heading">
     <h1 class="heading__title">Gradient Banner Cards</h1>
-    <p class="heading__credits"><a class="heading__link" target="_blank" href="https://dribbble.com/sl">Design by Simon Lurwer on Dribbble</a></p>
+    <p class="heading__credits"><a class="heading__link" target="_blank" href="https://schneider-electric-dev.collibra.com/glossary?view=239f570a-ad57-4ee2-a725-3f264cca0da8">Design by Simon Lurwer on Dribbble</a></p>
   </div>
   <div class="cards">
     <div class="card card-1">
@@ -37,7 +37,7 @@ Surya
       <p class="card__exit"><i class="fas fa-times"></i></p>
       <h2 class="card__title">Link 4.</h2>
       <p class="card__apply">
-        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+        <a class="card__link" href="https://schneider-electric-dev.collibra.com/glossary?view=239f570a-ad57-4ee2-a725-3f264cca0da8">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
     </div>
     <div class="card card-5">
