--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Surya
     <div class="card card-1">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Link 1</h2>
+      <h2 class="card__title">Business Glossary </h2>
       <p class="card__apply">
         <a class="card__link" href="https://schneider-electric-dev.collibra.com/glossary?view=239f570a-ad57-4ee2-a725-3f264cca0da8">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
